// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack configs > sets up the default config with default settings 1`] = `
{
  "context": "/Users/greg.martin/workspaces/availity-workflow/project/app",
  "devtool": "source-map",
  "entry": {
    "index": [
      "/Users/greg.martin/workspaces/availity-workflow/node_modules/react-app-polyfill/stable.js",
      "/Users/greg.martin/workspaces/availity-workflow/node_modules/navigator.sendbeacon/dist/navigator.sendbeacon.cjs.js",
      "/Users/greg.martin/workspaces/availity-workflow/project/app/index.js",
    ],
  },
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]vfile\\[/\\\\\\\\\\]core\\\\\\.js/,
        "use": [
          {
            "loader": "imports-loader",
            "options": {
              "imports": [
                "single process/browser process",
              ],
              "type": "commonjs",
            },
          },
        ],
      },
      {
        "include": [
          "/Users/greg.martin/workspaces/availity-workflow/project/app",
          /node_modules\\[/\\\\\\\\\\]\\(\\?=\\(@av\\)\\)\\.\\*/,
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "esbuild-loader",
            "options": {
              "loader": "tsx",
              "target": "es2015",
            },
          },
        ],
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "test": /\\\\\\.css\\$/,
        "use": [
          "style-loader",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 1,
              "sourceMap": true,
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "postcssOptions": {
                "plugins": [
                  {
                    "Rule": [Function],
                    "postcssPlugin": "postcss-focus",
                  },
                  {
                    "Once": [Function],
                    "postcssPlugin": "postcss-flexbugs-fixes",
                  },
                  {
                    "plugins": [
                      {
                        "AtRule": {
                          "custom-media": [Function],
                          "media": [Function],
                        },
                        "postcssPlugin": "postcss-media-minmax",
                      },
                      {
                        "Declaration": [Function],
                        "postcssPlugin": "postcss-initial",
                      },
                      {
                        "Declaration": [Function],
                        "postcssPlugin": "postcss-page-break",
                      },
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-font-variant",
                      },
                      {
                        "Declaration": [Function],
                        "postcssPlugin": "postcss-gap-properties",
                      },
                      {
                        "Declaration": [Function],
                        "postcssPlugin": "postcss-unset-value",
                      },
                      {
                        "postcssPlugin": "postcss-custom-properties",
                        "prepare": [Function],
                      },
                      {
                        "postcssPlugin": "postcss-progressive-custom-properties",
                        "prepare": [Function],
                      },
                      {
                        "browsers": undefined,
                        "info": [Function],
                        "options": {
                          "env": undefined,
                          "flexbox": "no-2009",
                          "overrideBrowserslist": undefined,
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "OnceExit": [Function],
                        "postcssPlugin": "postcss-preset-env",
                      },
                    ],
                    "postcssPlugin": "postcss-preset-env",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-reporter",
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(scss\\|sass\\)\\$/,
        "use": [
          "style-loader",
          {
            "loader": "css-loader",
            "options": {
              "sourceMap": true,
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "postcssOptions": {
                "plugins": [
                  {
                    "Rule": [Function],
                    "postcssPlugin": "postcss-focus",
                  },
                  {
                    "Once": [Function],
                    "postcssPlugin": "postcss-flexbugs-fixes",
                  },
                  {
                    "plugins": [
                      {
                        "AtRule": {
                          "custom-media": [Function],
                          "media": [Function],
                        },
                        "postcssPlugin": "postcss-media-minmax",
                      },
                      {
                        "Declaration": [Function],
                        "postcssPlugin": "postcss-initial",
                      },
                      {
                        "Declaration": [Function],
                        "postcssPlugin": "postcss-page-break",
                      },
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-font-variant",
                      },
                      {
                        "Declaration": [Function],
                        "postcssPlugin": "postcss-gap-properties",
                      },
                      {
                        "Declaration": [Function],
                        "postcssPlugin": "postcss-unset-value",
                      },
                      {
                        "postcssPlugin": "postcss-custom-properties",
                        "prepare": [Function],
                      },
                      {
                        "postcssPlugin": "postcss-progressive-custom-properties",
                        "prepare": [Function],
                      },
                      {
                        "browsers": undefined,
                        "info": [Function],
                        "options": {
                          "env": undefined,
                          "flexbox": "no-2009",
                          "overrideBrowserslist": undefined,
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "OnceExit": [Function],
                        "postcssPlugin": "postcss-preset-env",
                      },
                    ],
                    "postcssPlugin": "postcss-preset-env",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-reporter",
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "sass-loader",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "generator": {
          "filename": "fonts/[name].[ext]",
        },
        "test": /font\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|svg\\)\\$/i,
        "type": "asset/resource",
      },
      {
        "generator": {
          "filename": "images/[name].[ext]",
        },
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\)\\$/i,
        "type": "asset/resource",
      },
    ],
  },
  "output": {
    "chunkFilename": "[name].chunk.js",
    "filename": "[name].js",
    "path": "/Users/greg.martin/workspaces/availity-workflow/build",
  },
  "plugins": [
    DefinePlugin {
      "definitions": {
        "__DEV__": false,
        "__PROD__": false,
        "__STAGING__": false,
        "__TEST__": true,
        "process.env.NODE_ENV": ""test"",
      },
    },
    BannerPlugin {
      "banner": [Function],
      "options": {
        "banner": "APP_VERSION="N/A";",
        "entryOnly": true,
        "raw": true,
        "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
      },
    },
    BannerPlugin {
      "banner": [Function],
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z",
      },
    },
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": [],
        "favicon": "../../packages/workflow/public/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {},
        "minify": "auto",
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Availity",
        "xhtml": false,
      },
      "userOptions": {
        "favicon": "../../packages/workflow/public/favicon.ico",
        "template": "../../packages/workflow/public/index.html",
        "title": "Availity",
      },
      "version": 5,
    },
    IgnorePlugin {
      "checkIgnore": [Function],
      "options": {
        "contextRegExp": /moment\\$/,
        "resourceRegExp": /\\^\\\\\\.\\\\/locale\\$/,
      },
    },
    CaseSensitivePathsPlugin {
      "fsOperations": 0,
      "logger": Console {
        "assert": [Function],
        "clear": [Function],
        "count": [Function],
        "countReset": [Function],
        "debug": [Function],
        "dir": [Function],
        "dirxml": [Function],
        "error": [Function],
        "group": [Function],
        "groupCollapsed": [Function],
        "groupEnd": [Function],
        "info": [Function],
        "log": [Function],
        "table": [Function],
        "time": [Function],
        "timeEnd": [Function],
        "timeLog": [Function],
        "trace": [Function],
        "warn": [Function],
      },
      "options": {},
      "pathCache": Map {},
      "primed": false,
    },
    DuplicatePackageCheckerPlugin {
      "options": {
        "emitError": false,
        "exclude": [Function],
        "showHelp": true,
        "strict": true,
        "verbose": true,
      },
    },
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "cache": true,
        "cacheLocation": "/Users/greg.martin/workspaces/availity-workflow/node_modules/.cache/.eslintcache",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "js",
          "jsx",
          "ts",
          "tsx",
          "mjs",
        ],
        "failOnError": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
    ReactRefreshPlugin {
      "options": {
        "exclude": /node_modules/i,
        "include": /\\\\\\.\\(\\[cm\\]js\\|\\[jt\\]sx\\?\\|flow\\)\\$/i,
        "overlay": {
          "entry": "/Users/greg.martin/workspaces/availity-workflow/node_modules/@pmmmwh/react-refresh-webpack-plugin/client/ErrorOverlayEntry.js",
          "module": "/Users/greg.martin/workspaces/availity-workflow/node_modules/@pmmmwh/react-refresh-webpack-plugin/overlay/index.js",
          "sockIntegration": "wds",
        },
      },
    },
    WebpackNotifierPlugin {
      "isFirstBuild": true,
      "lastBuildSucceeded": false,
      "options": {
        "contentImage": "/Users/greg.martin/workspaces/availity-workflow/packages/workflow/public/availity.png",
        "excludeWarnings": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss",
    ],
    "fallback": {
      "path": "/Users/greg.martin/workspaces/availity-workflow/node_modules/path-browserify/index.js",
    },
    "modules": [
      "/Users/greg.martin/workspaces/availity-workflow/project/app",
      "node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/packages/workflow/node_modules",
    ],
    "plugins": [
      TsconfigPathsPlugin {
        "absoluteBaseUrl": "/Users/greg.martin/workspaces/availity-workflow/example",
        "baseUrl": "./example/",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "log": {
          "log": [Function],
          "logError": [Function],
          "logInfo": [Function],
          "logWarning": [Function],
        },
        "matchPath": [Function],
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
    "symlinks": true,
  },
  "resolveLoader": {
    "modules": [
      "/Users/greg.martin/workspaces/availity-workflow/node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/packages/workflow/node_modules",
    ],
    "symlinks": true,
  },
  "stats": "minimal",
  "target": "browserslist: last 1 chrome version, last 1 firefox version, last 1 safari version",
}
`;

exports[`webpack configs > sets up the production config with default settings 1`] = `
{
  "context": "/Users/greg.martin/workspaces/availity-workflow/project/app",
  "devtool": "source-map",
  "entry": {
    "index": [
      "/Users/greg.martin/workspaces/availity-workflow/node_modules/react-app-polyfill/stable.js",
      "/Users/greg.martin/workspaces/availity-workflow/node_modules/navigator.sendbeacon/dist/navigator.sendbeacon.cjs.js",
      "/Users/greg.martin/workspaces/availity-workflow/project/app/index.js",
    ],
  },
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]vfile\\[/\\\\\\\\\\]core\\\\\\.js/,
            "use": [
              {
                "loader": "imports-loader",
                "options": {
                  "imports": [
                    "single process/browser process",
                  ],
                  "type": "commonjs",
                },
              },
            ],
          },
          {
            "include": [
              "/Users/greg.martin/workspaces/availity-workflow/project/app",
              /node_modules\\[/\\\\\\\\\\]\\(\\?=\\(@av\\)\\)\\.\\*/,
            ],
            "test": /\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
            "use": [
              {
                "loader": "esbuild-loader",
                "options": {
                  "loader": "tsx",
                  "target": "es2015",
                },
              },
            ],
          },
          {
            "resolve": {
              "fullySpecified": false,
            },
            "test": /\\\\\\.m\\?js/,
          },
          {
            "test": /\\\\\\.css\\$/,
            "use": [
              {
                "loader": "/Users/greg.martin/workspaces/availity-workflow/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto",
                },
              },
              {
                "loader": "css-loader",
                "options": {
                  "importLoaders": 1,
                  "sourceMap": true,
                },
              },
              {
                "loader": "postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      {
                        "Rule": [Function],
                        "postcssPlugin": "postcss-focus",
                      },
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "plugins": [
                          {
                            "AtRule": {
                              "custom-media": [Function],
                              "media": [Function],
                            },
                            "postcssPlugin": "postcss-media-minmax",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-initial",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-page-break",
                          },
                          {
                            "Once": [Function],
                            "postcssPlugin": "postcss-font-variant",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-gap-properties",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-unset-value",
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties",
                            "prepare": [Function],
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties",
                            "prepare": [Function],
                          },
                          {
                            "browsers": undefined,
                            "info": [Function],
                            "options": {
                              "env": undefined,
                              "flexbox": "no-2009",
                              "overrideBrowserslist": undefined,
                            },
                            "postcssPlugin": "autoprefixer",
                            "prepare": [Function],
                          },
                          {
                            "OnceExit": [Function],
                            "postcssPlugin": "postcss-preset-env",
                          },
                        ],
                        "postcssPlugin": "postcss-preset-env",
                      },
                      {
                        "OnceExit": [Function],
                        "postcssPlugin": "postcss-reporter",
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "test": /\\\\\\.\\(scss\\|sass\\)\\$/,
            "use": [
              {
                "loader": "/Users/greg.martin/workspaces/availity-workflow/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto",
                },
              },
              "css-loader",
              {
                "loader": "postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      {
                        "Rule": [Function],
                        "postcssPlugin": "postcss-focus",
                      },
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "plugins": [
                          {
                            "AtRule": {
                              "custom-media": [Function],
                              "media": [Function],
                            },
                            "postcssPlugin": "postcss-media-minmax",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-initial",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-page-break",
                          },
                          {
                            "Once": [Function],
                            "postcssPlugin": "postcss-font-variant",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-gap-properties",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-unset-value",
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties",
                            "prepare": [Function],
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties",
                            "prepare": [Function],
                          },
                          {
                            "browsers": undefined,
                            "info": [Function],
                            "options": {
                              "env": undefined,
                              "flexbox": "no-2009",
                              "overrideBrowserslist": undefined,
                            },
                            "postcssPlugin": "autoprefixer",
                            "prepare": [Function],
                          },
                          {
                            "OnceExit": [Function],
                            "postcssPlugin": "postcss-preset-env",
                          },
                        ],
                        "postcssPlugin": "postcss-preset-env",
                      },
                      {
                        "OnceExit": [Function],
                        "postcssPlugin": "postcss-reporter",
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "sass-loader",
                "options": {
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "generator": {
              "filename": "fonts/[name][ext]",
            },
            "test": /font\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|svg\\)\\$/i,
            "type": "asset/resource",
          },
          {
            "generator": {
              "filename": "images/[name].[ext]",
            },
            "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\)\\$/i,
            "type": "asset/resource",
          },
          {
            "exclude": [
              /\\\\\\.\\(js\\|cjs\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
              /\\\\\\.html\\$/,
              /\\\\\\.json\\$/,
            ],
            "generator": {
              "filename": "static/media/[contenthash:8][ext]",
            },
            "type": "asset/resource",
          },
        ],
      },
    ],
  },
  "optimization": {
    "minimizer": [],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": {
      "cacheGroups": {
        "default": {
          "minChunks": 2,
          "priority": -20,
          "reuseExistingChunk": true,
        },
        "defaultVendors": {
          "chunks": "all",
          "idHint": "defaultVendors",
          "priority": -10,
          "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]/,
        },
        "lodash": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 1,
          "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]\\(lodash\\(\\[\\.-\\]\\)\\?\\\\w\\*\\?\\)\\[/\\\\\\\\\\]/,
        },
        "moment": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 2,
          "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]\\(moment\\)\\[/\\\\\\\\\\]/,
        },
        "react": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 10,
          "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]\\(react\\|react-dom\\)\\[/\\\\\\\\\\]/,
        },
        "styles": {
          "chunks": "all",
          "enforce": true,
          "idHint": "styles",
          "test": /\\\\\\.css\\$/,
        },
      },
    },
  },
  "output": {
    "chunkFilename": "[name].chunk.js",
    "devtoolModuleFilenameTemplate": [Function],
    "filename": "[name].js",
    "path": "/Users/greg.martin/workspaces/availity-workflow/build",
  },
  "plugins": [
    DefinePlugin {
      "definitions": {
        "__DEV__": false,
        "__PROD__": false,
        "__STAGING__": false,
        "__TEST__": true,
        "process.env.NODE_ENV": ""test"",
      },
    },
    BannerPlugin {
      "banner": [Function],
      "options": {
        "banner": "APP_VERSION="N/A";",
        "entryOnly": true,
        "raw": true,
        "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
      },
    },
    BannerPlugin {
      "banner": [Function],
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z",
      },
    },
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": [],
        "favicon": "../../packages/workflow/public/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {},
        "minify": "auto",
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Availity",
        "xhtml": false,
      },
      "userOptions": {
        "favicon": "../../packages/workflow/public/favicon.ico",
        "template": "../../packages/workflow/public/index.html",
        "title": "Availity",
      },
      "version": 5,
    },
    IgnorePlugin {
      "checkIgnore": [Function],
      "options": {
        "contextRegExp": /moment\\$/,
        "resourceRegExp": /\\^\\\\\\.\\\\/locale\\$/,
      },
    },
    CaseSensitivePathsPlugin {
      "fsOperations": 0,
      "logger": Console {
        "assert": [Function],
        "clear": [Function],
        "count": [Function],
        "countReset": [Function],
        "debug": [Function],
        "dir": [Function],
        "dirxml": [Function],
        "error": [Function],
        "group": [Function],
        "groupCollapsed": [Function],
        "groupEnd": [Function],
        "info": [Function],
        "log": [Function],
        "table": [Function],
        "time": [Function],
        "timeEnd": [Function],
        "timeLog": [Function],
        "trace": [Function],
        "warn": [Function],
      },
      "options": {},
      "pathCache": Map {},
      "primed": false,
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "css/[name]-[contenthash:8].chunk.css",
        "experimentalUseImportModule": undefined,
        "filename": "css/[name]-[contenthash:8].chunk.css",
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss",
    ],
    "fallback": {
      "path": "/Users/greg.martin/workspaces/availity-workflow/node_modules/path-browserify/index.js",
    },
    "modules": [
      "/Users/greg.martin/workspaces/availity-workflow/project/app",
      "node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/packages/workflow/node_modules",
    ],
    "plugins": [
      TsconfigPathsPlugin {
        "absoluteBaseUrl": "/Users/greg.martin/workspaces/availity-workflow/example",
        "baseUrl": "./example/",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "log": {
          "log": [Function],
          "logError": [Function],
          "logInfo": [Function],
          "logWarning": [Function],
        },
        "matchPath": [Function],
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
    "symlinks": true,
  },
  "resolveLoader": {
    "modules": [
      "/Users/greg.martin/workspaces/availity-workflow/node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/packages/workflow/node_modules",
    ],
    "symlinks": true,
  },
  "target": "browserslist: defaults",
}
`;

exports[`webpack configs > sets up the profile config with default settings 1`] = `
{
  "context": "/Users/greg.martin/workspaces/availity-workflow/project/app",
  "devtool": "source-map",
  "entry": {
    "index": [
      "/Users/greg.martin/workspaces/availity-workflow/node_modules/react-app-polyfill/stable.js",
      "/Users/greg.martin/workspaces/availity-workflow/node_modules/navigator.sendbeacon/dist/navigator.sendbeacon.cjs.js",
      "/Users/greg.martin/workspaces/availity-workflow/project/app/index.js",
    ],
  },
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]vfile\\[/\\\\\\\\\\]core\\\\\\.js/,
            "use": [
              {
                "loader": "imports-loader",
                "options": {
                  "imports": [
                    "single process/browser process",
                  ],
                  "type": "commonjs",
                },
              },
            ],
          },
          {
            "include": [
              "/Users/greg.martin/workspaces/availity-workflow/project/app",
              /node_modules\\[/\\\\\\\\\\]\\(\\?=\\(@av\\)\\)\\.\\*/,
            ],
            "test": /\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
            "use": [
              {
                "loader": "esbuild-loader",
                "options": {
                  "loader": "tsx",
                  "target": "es2015",
                },
              },
            ],
          },
          {
            "resolve": {
              "fullySpecified": false,
            },
            "test": /\\\\\\.m\\?js/,
          },
          {
            "test": /\\\\\\.css\\$/,
            "use": [
              {
                "loader": "/Users/greg.martin/workspaces/availity-workflow/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto",
                },
              },
              {
                "loader": "css-loader",
                "options": {
                  "importLoaders": 1,
                  "sourceMap": true,
                },
              },
              {
                "loader": "postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      {
                        "Rule": [Function],
                        "postcssPlugin": "postcss-focus",
                      },
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "plugins": [
                          {
                            "AtRule": {
                              "custom-media": [Function],
                              "media": [Function],
                            },
                            "postcssPlugin": "postcss-media-minmax",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-initial",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-page-break",
                          },
                          {
                            "Once": [Function],
                            "postcssPlugin": "postcss-font-variant",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-gap-properties",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-unset-value",
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties",
                            "prepare": [Function],
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties",
                            "prepare": [Function],
                          },
                          {
                            "browsers": undefined,
                            "info": [Function],
                            "options": {
                              "env": undefined,
                              "flexbox": "no-2009",
                              "overrideBrowserslist": undefined,
                            },
                            "postcssPlugin": "autoprefixer",
                            "prepare": [Function],
                          },
                          {
                            "OnceExit": [Function],
                            "postcssPlugin": "postcss-preset-env",
                          },
                        ],
                        "postcssPlugin": "postcss-preset-env",
                      },
                      {
                        "OnceExit": [Function],
                        "postcssPlugin": "postcss-reporter",
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "test": /\\\\\\.\\(scss\\|sass\\)\\$/,
            "use": [
              {
                "loader": "/Users/greg.martin/workspaces/availity-workflow/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto",
                },
              },
              "css-loader",
              {
                "loader": "postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      {
                        "Rule": [Function],
                        "postcssPlugin": "postcss-focus",
                      },
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "plugins": [
                          {
                            "AtRule": {
                              "custom-media": [Function],
                              "media": [Function],
                            },
                            "postcssPlugin": "postcss-media-minmax",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-initial",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-page-break",
                          },
                          {
                            "Once": [Function],
                            "postcssPlugin": "postcss-font-variant",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-gap-properties",
                          },
                          {
                            "Declaration": [Function],
                            "postcssPlugin": "postcss-unset-value",
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties",
                            "prepare": [Function],
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties",
                            "prepare": [Function],
                          },
                          {
                            "browsers": undefined,
                            "info": [Function],
                            "options": {
                              "env": undefined,
                              "flexbox": "no-2009",
                              "overrideBrowserslist": undefined,
                            },
                            "postcssPlugin": "autoprefixer",
                            "prepare": [Function],
                          },
                          {
                            "OnceExit": [Function],
                            "postcssPlugin": "postcss-preset-env",
                          },
                        ],
                        "postcssPlugin": "postcss-preset-env",
                      },
                      {
                        "OnceExit": [Function],
                        "postcssPlugin": "postcss-reporter",
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "sass-loader",
                "options": {
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "generator": {
              "filename": "fonts/[name][ext]",
            },
            "test": /font\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|svg\\)\\$/i,
            "type": "asset/resource",
          },
          {
            "generator": {
              "filename": "images/[name].[ext]",
            },
            "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\)\\$/i,
            "type": "asset/resource",
          },
          {
            "exclude": [
              /\\\\\\.\\(js\\|cjs\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
              /\\\\\\.html\\$/,
              /\\\\\\.json\\$/,
            ],
            "generator": {
              "filename": "static/media/[contenthash:8][ext]",
            },
            "type": "asset/resource",
          },
        ],
      },
    ],
  },
  "optimization": {
    "minimizer": [],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": {
      "cacheGroups": {
        "default": {
          "minChunks": 2,
          "priority": -20,
          "reuseExistingChunk": true,
        },
        "defaultVendors": {
          "chunks": "all",
          "idHint": "defaultVendors",
          "priority": -10,
          "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]/,
        },
        "lodash": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 1,
          "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]\\(lodash\\(\\[\\.-\\]\\)\\?\\\\w\\*\\?\\)\\[/\\\\\\\\\\]/,
        },
        "moment": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 2,
          "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]\\(moment\\)\\[/\\\\\\\\\\]/,
        },
        "react": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 10,
          "test": /\\[/\\\\\\\\\\]node_modules\\[/\\\\\\\\\\]\\(react\\|react-dom\\)\\[/\\\\\\\\\\]/,
        },
        "styles": {
          "chunks": "all",
          "enforce": true,
          "idHint": "styles",
          "test": /\\\\\\.css\\$/,
        },
      },
    },
  },
  "output": {
    "chunkFilename": "[name].chunk.js",
    "devtoolModuleFilenameTemplate": [Function],
    "filename": "[name].js",
    "path": "/Users/greg.martin/workspaces/availity-workflow/build",
  },
  "plugins": [
    DefinePlugin {
      "definitions": {
        "__DEV__": false,
        "__PROD__": false,
        "__STAGING__": false,
        "__TEST__": true,
        "process.env.NODE_ENV": ""test"",
      },
    },
    BannerPlugin {
      "banner": [Function],
      "options": {
        "banner": "APP_VERSION="N/A";",
        "entryOnly": true,
        "raw": true,
        "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
      },
    },
    BannerPlugin {
      "banner": [Function],
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z",
      },
    },
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": [],
        "favicon": "../../packages/workflow/public/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {},
        "minify": "auto",
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Availity",
        "xhtml": false,
      },
      "userOptions": {
        "favicon": "../../packages/workflow/public/favicon.ico",
        "template": "../../packages/workflow/public/index.html",
        "title": "Availity",
      },
      "version": 5,
    },
    IgnorePlugin {
      "checkIgnore": [Function],
      "options": {
        "contextRegExp": /moment\\$/,
        "resourceRegExp": /\\^\\\\\\.\\\\/locale\\$/,
      },
    },
    CaseSensitivePathsPlugin {
      "fsOperations": 0,
      "logger": Console {
        "assert": [Function],
        "clear": [Function],
        "count": [Function],
        "countReset": [Function],
        "debug": [Function],
        "dir": [Function],
        "dirxml": [Function],
        "error": [Function],
        "group": [Function],
        "groupCollapsed": [Function],
        "groupEnd": [Function],
        "info": [Function],
        "log": [Function],
        "table": [Function],
        "time": [Function],
        "timeEnd": [Function],
        "timeLog": [Function],
        "trace": [Function],
        "warn": [Function],
      },
      "options": {},
      "pathCache": Map {},
      "primed": false,
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "css/[name]-[contenthash:8].chunk.css",
        "experimentalUseImportModule": undefined,
        "filename": "css/[name]-[contenthash:8].chunk.css",
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    BundleAnalyzerPlugin {
      "logger": Logger {
        "activeLevels": Set {
          "info",
          "warn",
          "error",
          "silent",
        },
      },
      "opts": {
        "analyzerHost": "127.0.0.1",
        "analyzerMode": "static",
        "analyzerPort": 8888,
        "analyzerUrl": [Function],
        "defaultSizes": "parsed",
        "excludeAssets": null,
        "generateStatsFile": false,
        "logLevel": "info",
        "openAnalyzer": true,
        "reportFilename": "profile.html",
        "reportTitle": [Function],
        "startAnalyzer": true,
        "statsFilename": "stats.json",
        "statsOptions": null,
      },
      "server": null,
    },
    DuplicatePackageCheckerPlugin {
      "options": {
        "emitError": false,
        "exclude": [Function],
        "showHelp": true,
        "strict": true,
        "verbose": false,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss",
    ],
    "fallback": {
      "path": "/Users/greg.martin/workspaces/availity-workflow/node_modules/path-browserify/index.js",
    },
    "modules": [
      "/Users/greg.martin/workspaces/availity-workflow/project/app",
      "node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/packages/workflow/node_modules",
    ],
    "plugins": [
      TsconfigPathsPlugin {
        "absoluteBaseUrl": "/Users/greg.martin/workspaces/availity-workflow/example",
        "baseUrl": "./example/",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "log": {
          "log": [Function],
          "logError": [Function],
          "logInfo": [Function],
          "logWarning": [Function],
        },
        "matchPath": [Function],
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
    "symlinks": true,
  },
  "resolveLoader": {
    "modules": [
      "/Users/greg.martin/workspaces/availity-workflow/node_modules",
      "/Users/greg.martin/workspaces/availity-workflow/packages/workflow/node_modules",
    ],
    "symlinks": true,
  },
  "target": "browserslist: defaults",
}
`;
